fix model objects
