# api/src/model/data/CreateCustomerMetadata.ts
@@ -1,0 +1,5 @@
+import { CustomerMetadata } from './CustomerMetadata';
+
+export class CreateCustomerMetadata extends CustomerMetadata {
+
+}
